# LangBot

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  ARCHITECTURE.md  CLA.md  CONTRIBUTING.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  README_CN.md  README_EN.md  README_ES.md  README_FR.md  README_JP.md  README_KO.md  README_RU.md  README_TW.md  README_VI.md  WEBSOCKET_README.md  components.yaml  docker-compose.yaml  fix.MD  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_tests.sh  test-embed.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug-report_.yml  bug-report_en.yml  feature-request.yml  feature-request_en.yml  submit-plugin.yml  submit-plugin_en.yml
.github/workflows/: build-dev-image.yaml  build-docker-image.yml  build-release-artifacts.yaml  check-i18n.yml  cla.yml  frontend-tests.yml  lint.yml  publish-to-pypi.yml  run-tests.yml  test-dev-image.yaml  test-migrations.yml
docker/: README_K8S.md  deploy-k8s-test.sh  docker-compose.yaml  kubernetes.yaml
docs/: API_KEY_AUTH.md  HTTP_BOT_ADAPTER_DESIGN.md  PYPI_INSTALLATION.md  SEEKDB_INTEGRATION.md  TESTING_SUMMARY.md  VALKEY_SEARCH_INTEGRATION.md  http-bot-openapi.json  service-api-openapi.json
docs/review/: box-architecture.md  box-issues.md  box-session-scope.md  box-test-coverage.md  box-tob-analysis.md  box-vs-plugin-runtime.md  mcp-resources-pr-2215-review.md
examples/http-bot/: README.md  README.zh.md  client.py  client.ts  playground.py
examples/web-page-bot/: README.md  README.zh.md  index.html
libs/coze_server_api/: client.py
libs/dify_service_api/: __init__.py  test.py
libs/dify_service_api/v1/: client.py  client_test.py
libs/dingtalk_api/: EchoHandler.py  api.py  dingtalkevent.py
libs/official_account_api/: api.py  oaevent.py
libs/qq_official_api/: api.py  qqofficialevent.py
libs/slack_api/: api.py  slackevent.py
libs/wechatpad_api/: __init__.py  client.py
libs/wechatpad_api/api/: chatroom.py  downloadpai.py  friend.py  login.py  message.py  user.py
libs/wechatpad_api/util/: http_util.py  terminal_printer.py
libs/wecom_ai_bot_api/: WXBizMsgCrypt3.py  api.py  wecombotevent.py
libs/wecom_api/: WXBizMsgCrypt3.py  api.py  wecomevent.py
libs/wecom_customer_service_api/: api.py  wecomcsevent.py
pkg/audit/: __init__.py  identifier.py
pkg/audit/center/: apigroup.py  v2.py
pkg/command/: cmdmgr.py  entities.py  errors.py  operator.py
pkg/command/operators/: cmd.py  delc.py  func.py  help.py  last.py  list.py  model.py  next.py  ollama.py  plugin.py  prompt.py  resend.py  reset.py  update.py  version.py
pkg/config/: manager.py  model.py
pkg/config/impls/: json.py  pymodule.py  yaml.py
pkg/core/: app.py  boot.py  entities.py  migration.py  note.py  stage.py  taskmgr.py
pkg/core/bootutils/: config.py  deps.py  files.py  log.py
pkg/core/migrations/: m001_sensitive_word_migration.py  m002_openai_config_migration.py  m003_anthropic_requester_cfg_completion.py  m004_moonshot_cfg_completion.py  m005_deepseek_cfg_completion.py  m007_qcg_center_url.py  m008_ad_fixwin_config_migrate.py  m009_msg_truncator_cfg.py  m010_ollama_requester_config.py  m011_command_prefix_config.py  m012_runner_config.py  m013_http_api_config.py  m017_dify_api_timeout_params.py  m018_xai_config.py  m019_zhipuai_config.py  m020_wecom_config.py  m021_lark_config.py  m022_lmstudio_config.py  m023_siliconflow_config.py  m024_discord_config.py  m025_gewechat_config.py  m026_qqofficial_config.py  m027_wx_official_account_config.py  m028_aliyun_requester_config.py  (+14 more)
pkg/discover/: engine.py
pkg/persistence/: database.py  mgr.py  migration.py
pkg/pipeline/: controller.py  entities.py  pipelinemgr.py  pool.py  stage.py  stagemgr.py
pkg/platform/: adapter.py  adapter.yaml  botmgr.py  logger.py  manager.py  webhook_pusher.py
pkg/plugin/: __init__.py  connector.py  context.py  errors.py  events.py  handler.py  host.py  installer.py  loader.py  manager.py  models.py  setting.py
pkg/provider/: entities.py  runner.py  runnermgr.py
pkg/storage/: mgr.py  provider.py
pkg/utils/: announce.py  constants.py  funcschema.py  image.py  importutil.py  ip.py  logcache.py  pkgmgr.py  platform.py  proxy.py  version.py
pkg/vector/: mgr.py  vdb.py
res/: instance_id.json
res/scripts/: publish_announcement.py
scripts/: build_dingtalk_card_template.py
skills/: .gitignore  AGENTS.md  README.md  package.json  skills.index.json
skills/docs/: user-guide.md
skills/qa-agent-docs/: user-guide.md
skills/schemas/: README.md  case.schema.json  skill-index.schema.json  suite.schema.json  troubleshooting.schema.json
skills/scripts/: bootstrap-lbs.mjs
skills/skills/: .env  .env.example
skills/src/: cli.ts  constants.ts  env-groups.ts  fixtures.ts  fs.ts  lbs.ts  log-guard.ts  readiness.ts  setup-automation.ts  types.ts
skills/test/: lbs-cli.test.ts
src/langbot/: __init__.py  __main__.py
templates/: config.yaml  default-pipeline-config.json  platform.json  provider.json
templates/legacy/: pipeline.json  provider.json  system.json
templates/metadata/: llm-models.json
templates/schema/: pipeline.json  platform.json  provider.json  system.json
tests/: README.md  test_cwe94_debug_exec.py
tests/e2e/: conftest.py  test_startup.py
tests/factories/: __init__.py  app.py  message.py  platform.py  provider.py
tests/integration/: __init__.py
tests/manual/: mcp_smoke.py
tests/smoke/: __init__.py  test_fake_message_flow.py
tests/unit_tests/: COVERAGE_EXCLUSIONS.md  test_paths.py  test_preproc.py  test_skill_service.py
tests/utils/: __init__.py  import_isolation.py
web/: .env.example  .gitignore  .lintstagedrc.json  .prettierrc.mjs  README.md  components.json  eslint.config.mjs  fix_router.sh  index.html  migrate.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
web/.husky/: pre-commit
web/scripts/: check-i18n.mjs
web/src/: App.vue  i18next.d.ts  main.tsx  router.tsx
web_ui/: .prettierrc.mjs  package-lock.json  package.json
web_ui/.husky/: pre-commit
(+1328 files in other folders)
